--- a/styles/sign.css
+++ b/styles/sign.css
@@ -6,6 +6,7 @@
 
 /* Basic body styles */
 body {
+  position: relative;
   font-family: "Inter", sans-serif;
 }
 
@@ -100,6 +101,7 @@ nav ul a:hover {
   left: 0;
   width: calc(100% - 40px);
   background-color: black;
+  z-index: 10;
 }
 
 /* Container padding */
@@ -108,51 +110,59 @@ nav ul a:hover {
   width: calc(100% - 80px);
 }
 
-.boxs {
+section {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  padding-block: 40px;
-  gap: 20px;
+  place-items: center;
+  padding-top: 60px;
+  padding-bottom: 100px;
 
-  .box {
-    text-align: center;
-    background-color: #ebedf0;
-    padding: 30px 10px;
-    border-radius: 7px;
-    h2 {
-      font-size: 28px;
-      font-weight: bold;
-    }
+  form {
+    border: 1px solid #ccc;
+    padding: 20px;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    position: relative;
 
-    .price {
-      font-weight: bold;
-      font-size: 24px;
-      color: #3a6108;
-      padding-block: 20px;
-      span {
-        font-size: medium;
-        color: #000;
+    input {
+      height: 25px;
+      margin-top: 30px;
+      border-width: 0;
+      border-width: 2px;
+      border-color: transparent transparent lightgray;
+      &:focus {
+        outline: none;
       }
     }
-    p {
-      padding-block: 5px;
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
     }
-    .info {
-      color: #696969;
-      font-weight: bold;
-      padding-block: 5px;
+    a {
+      margin-top: 25px;
+      text-decoration: underline;
     }
-
-    .free {
-      margin-top: 20px;
-      padding: 10px 15px;
-      background-color: #000;
-      color: #fff;
-      font-weight: bold;
-      border-radius: 7px;
-      cursor: pointer;
+    label {
+      padding-right: 20px;
+      padding-left: 5px;
     }
   }
+}
+
+input[type="submit"] {
+  padding: 10px;
+  border-radius: 20px;
+  border-width: 0;
+  font-weight: 600;
+  font-size: medium;
+  color: #000;
+  cursor: pointer;
+  height: 35px;
+  width: 100px;
 }
 
 /* Media query for small screens */
@@ -189,8 +199,11 @@ nav ul a:hover {
     color: #fff;
   }
 
-  .boxs {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  section {
+    form {
+      width: 250px;
+      padding: 10px;
+    }
   }
 }
 
@@ -201,6 +214,9 @@ footer {
   background-color: #000;
   color: #fff;
   font-weight: bold;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
 }
 
 @media (min-width: 767px) {
